updating openapi.yml and changed the default trackingId value
